deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-angular-app
  labels:
    app: my-angular-app
spec:
  replicas: 2  # number of pods
  selector:
    matchLabels:
      app: my-angular-app
  template:
    metadata:
      labels:
        app: my-angular-app
    spec:
      containers:
        - name: my-angular-app
          image: my-angular-app:latest   # replace with image in DockerHub/registry
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
