service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-angular-app-service
spec:
  selector:
    app: my-angular-app
  ports:
    - protocol: TCP
      port: 80        # service port
      targetPort: 80  # pod port
  type: ClusterIP
